--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,3 +6,7 @@ permalink: /404.html
 ---
 
 Sorry, but the page you were trying to view does not exist.
+
+
+<!-- Google analytics -->
+{% include googleAnalytics.html %}
