--- a/_posts/2010-01-08-post-chat.md
+++ b/_posts/2010-01-08-post-chat.md
@@ -132,3 +132,7 @@ Abbott: What was that?
 Costello: I said, I DON'T CARE!
 
 Abbott: Oh, that's our shortstop!
+
+
+<!-- Google analytics -->
+{% include googleAnalytics.html %}
