--- a/_posts/2010-03-07-post-link.md
+++ b/_posts/2010-03-07-post-link.md
@@ -13,3 +13,7 @@ This theme supports **link posts**, made famous by John Gruber. To use, just add
 > And this is how a quote looks.
 
 Some [link](#) can also be shown.
+
+
+<!-- Google analytics -->
+{% include googleAnalytics.html %}
