--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,9 +4,9 @@ excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
 ---
-
-Sorry, but the page you were trying to view does not exist.
-
-
 <!-- Google analytics -->
 {% include googleAnalytics.html %}
+<!-- leadfeeder analytics -->
+{% include leadfeederAnalytics.html %}
+
+Sorry, but the page you were trying to view does not exist.
