--- a/_posts/2010-01-08-post-chat.md
+++ b/_posts/2010-01-08-post-chat.md
@@ -6,6 +6,11 @@ tags:
   - chat
   - Post Formats
 ---
+<!-- Google analytics -->
+{% include googleAnalytics.html %}
+<!-- leadfeeder analytics -->
+{% include leadfeederAnalytics.html %}
+
 
 Abbott: Strange as it may seem, they give ball players nowadays very peculiar names.
 
@@ -133,6 +138,3 @@ Costello: I said, I DON'T CARE!
 
 Abbott: Oh, that's our shortstop!
 
-
-<!-- Google analytics -->
-{% include googleAnalytics.html %}
