--- a/_posts/2010-03-07-post-link.md
+++ b/_posts/2010-03-07-post-link.md
@@ -7,13 +7,13 @@ tags:
   - Post Formats
 link: https://github.com
 ---
+<!-- Google analytics -->
+{% include googleAnalytics.html %}
+<!-- leadfeeder analytics -->
+{% include leadfeederAnalytics.html %}
 
 This theme supports **link posts**, made famous by John Gruber. To use, just add `link: http://url-you-want-linked` to the post's YAML front matter and you're done.
 
 > And this is how a quote looks.
 
 Some [link](#) can also be shown.
-
-
-<!-- Google analytics -->
-{% include googleAnalytics.html %}
