--- a/_posts/2021-tests-02.md
+++ b/_posts/2021-tests-02.md
@@ -1,8 +1,8 @@
 ---
-title: "Top Tests - January"
-date: 2021-01-31
+title: "Implemented tests - February"
+date: 2021-02-28
 # last_modified_at: 2021-01-05T09:42:00-05:00
-description: "Our user survey's best security tests for January"
+description: "User submitted tests implemented in application"
 categories:
   - Monthly-Security-Tests
 tags:
@@ -19,10 +19,12 @@ image:
 
 ![feature image](/assets/images/monthly-tests/featureImage.jpg){:class="img-responsive"}
 
-# User submitted tests
+# This months implemented tests:
 
-## What is this list?
-These tests are from our monthly email newsletter called  **Security tests to put your worries to rest**. All the tests are submitted by people with extensive information security experience. Members of the list can vote on which tests should be implemented in our security testing platform.
+**Test requirements**
+* Can be done from a single computer
+* We can expect to get similar results on similar systems in the organization.
+* Does not need special software or hardware
 
 **Requirements**
 * Can be done from a single computer
@@ -41,6 +43,7 @@ Implemented in platform: :heavy_check_mark:
 nmap -p1-65535 scanme.nmap.org
 # Any unneeded, open, port is a failure.
 ```
+[![app image](/assets/images/monthly-tests/outbound-ports.png)(/assets/images/monthly-tests/outbound-ports.png)
 
 ## 2. Check antivirus is ON and reporting
 **CIS 8:** Malware Defenses  
