--- a/_posts/2021-tests-04.md
+++ b/_posts/2021-tests-04.md
@@ -1,8 +1,8 @@
 ---
-title: "Top Tests - February"
-date: 2021-02-28
+title: "Implemented tests - April"
+date: 2021-04-28
 # last_modified_at: 2021-01-05T09:42:00-05:00
-description: "Our user survey's best security tests for January"
+description: "User submitted tests implemented in application"
 categories:
   - Monthly-Security-Tests
 tags:
@@ -19,34 +19,32 @@ image:
 
 ![feature image](/assets/images/monthly-tests/featureImage.jpg){:class="img-responsive"}
 
-# User submitted tests
-
-## What is this list?
-These tests are from our monthly email newsletter called  **Security tests to put your worries to rest**. All the tests are submitted by people with extensive information security experience. Members of the list can vote on which tests should be implemented in our security testing platform.
+# This months implemented tests:
 
 **Test requirements**
 * Can be done from a single computer
 * We can expect to get similar results on similar systems in the organization.
 * Does not need special software or hardware
 
-
-## 1. Test connectivity out to other countries
-**CIS 12:** Boundary Defense  
-**From:** Eion  
+## 1. Assess average listening services per host
+**CIS 9:** Limitation and Control of Network Ports, Protocols, and Services  
+**From:** Brice  
 Implemented in platform: :heavy_check_mark:  
 >Unfortunately most attacks come from a small set of countries, because of this we've started blocking entire IP blocks from the worst offenders (we use pfBlocker for this). In order to test that this control is implemented we do ongoing nmap of a random set of IPs within these blocks. You can get the IP blocks from: https://lite.ip2location.com/ip-address-ranges-by-country
 
 ```bash
-# From a computer on the Internet:
+# From a computer on the network:
 # open a cmd prompt, then simply run:
-nmap -Pn --top-ports 10 bad-IPs-list
-# The test will output a grading on your SSL configuration.
+nmap -Pn --top-ports 100 192.168.0.0/24 -oG result
+# This will write the output to a file "result"
+# Then count the number of services and sort by highest occurance:
+cat result | grep -i open | grep -oE [0-9]\{1,4}/open | sort | uniq -c | sort -r
 ```
 
-## 2. Check user privileges
-**CIS 4:** Controlled Use of Administrative Privileges  
-**From:** Lindsey  
-Implemented in platform: :x:  
+## 2. Assess diversity of services inside your network
+**CIS 4:** Limitation and Control of Network Ports, Protocols, and Services   
+**From:** Ash  
+Implemented in platform: :heavy_check_mark:  
 >Check for privileges on your own computer. If you find yourself being admin (and your job is not being a system administrator) it's a good indicator that you need to look deeper into your organizations privilege management.
 
 ```bash
@@ -60,9 +58,9 @@ whoami /groups | find "-512 " && Echo I am a domain admin
 # Track changes and audit for unnecessary privileges.
 ```
 
-## 3. Check for VPN split tunneling
-**CIS 11:** Secure Configuration for Network Devices, such as Firewalls, Routers and Switches  
-**From:** Anonymous  
+## 3. Test connectivity from other countries to your organization
+**CIS 12:** Boundary Defense  
+**From:** Jason  
 Implemented in platform: :x:  
 >The network team has on multiple times configured our endpoints VPN client run with split tunneling, practically bypassing most of our firewalls, IDSes, and URL filters. We have made the helpdesk team run this command at random times a day on about a quarter of our endpoints to ensure we don't run split tunneling anywhere.
 
