--- a/_posts/2021-02-20-new-tests.md
+++ b/_posts/2021-02-20-new-tests.md
@@ -1,5 +1,5 @@
 ---
-title: "Implemented tests - February"
+title: "New Tests - February"
 date: 2021-02-28
 # last_modified_at: 2021-01-05T09:42:00-05:00
 description: "User submitted tests implemented in application"
@@ -43,7 +43,7 @@ Implemented in platform: :heavy_check_mark:
 nmap -p1-65535 scanme.nmap.org
 # Any unneeded, open, port is a failure.
 ```
-[![app image](/assets/images/monthly-tests/outbound-ports.png)(/assets/images/monthly-tests/outbound-ports.png)
+[![app image](/assets/images/monthly-tests/outbound-ports.png)](/assets/images/monthly-tests/outbound-ports.png)
 
 ## 2. Check antivirus is ON and reporting
 **CIS 8:** Malware Defenses  
