--- a/_posts/2021-03-20-new-tests.md
+++ b/_posts/2021-03-20-new-tests.md
@@ -1,5 +1,5 @@
 ---
-title: "Implemented tests - March"
+title: "New Tests - March"
 date: 2021-03-28
 # last_modified_at: 2021-01-05T09:42:00-05:00
 description: "User submitted tests implemented in application"
