--- a/_posts/2021-04-20-new-tests.md
+++ b/_posts/2021-04-20-new-tests.md
@@ -1,5 +1,5 @@
 ---
-title: "Implemented tests - April"
+title: "New Tests - April"
 date: 2021-04-28
 # last_modified_at: 2021-01-05T09:42:00-05:00
 description: "User submitted tests implemented in application"
