--- a/_posts/2021-02-20-new-tests.md
+++ b/_posts/2021-02-20-new-tests.md
@@ -43,7 +43,7 @@ Implemented in platform: :heavy_check_mark:
 nmap -p1-65535 scanme.nmap.org
 # Any unneeded, open, port is a failure.
 ```
-[![app image](/assets/images/monthly-tests/outbound-ports.png)](/assets/images/monthly-tests/outbound-ports.png)
+![app image](/assets/images/monthly-tests/outbound-ports.png){:class="img-responsive"}
 
 ## 2. Check antivirus is ON and reporting
 **CIS 8:** Malware Defenses  
