--- a/_posts/2020-09-12-Wishlist.md
+++ b/_posts/2020-09-12-Wishlist.md
@@ -1,5 +1,5 @@
 ---
-title: "New Tests - February"
+title: "Wishlist"
 date: 2021-02-28
 last_modified_at: 2021-04-13T09:00:00-05:00
 description: "User submitted tests implemented in application"
@@ -19,17 +19,13 @@ image:
 
 ![feature image](/assets/images/monthly-tests/featureImage.jpg){:class="img-responsive"}
 
-# Wishlist:
+These are the current tests people have been recommending we implement into our testing platform.
 
 **Test requirements**
 * Can be done from a single computer
 * We can expect to get similar results on similar systems in the organization.
 * Does not need special software or hardware
 
-**Requirements**
-* Can be done from a single computer
-* We can expect to get similar results on similar systems in the organization.
-* Does not need special software or hardware
 
 ## Test connectivity out to other countries
 **CIS 12:** Boundary Defense  
